@@ -3373,6 +3373,8 @@ operator|!
 name|successfulInstall
 condition|)
 block|{
+try|try
+block|{
 name|logReplicationTimeAndConfFiles
 argument_list|(
 literal|null
@@ -3380,6 +3382,23 @@ argument_list|,
 name|successfulInstall
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"caught"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 name|filesToDownload
 operator|=
